# Report_Generation

Company_data_agent/: main.py  pyproject.toml  test.ipynb
Company_data_agent/agent_workspace/: draft_report.md  phonepe_competitor_analysis.md  phonepe_financial_report.md
Company_data_agent/agent_workspace/large_tool_results/: 96ec68e7-74f3-4688-9368-8d5e1f569459  c34bdc70-7202-45b3-a8e1-387478af58f6  c8f664b7-dbfe-4330-a2cc-7718cbc985d0  e772ae82-74b8-48b5-a19e-6cb0d8ba7c32
Company_data_agent/agent_workspace/skills/perplexity/: SKILL.md
Company_data_agent/agent_workspace/skills/vespa_search/: SKILL.md
Company_data_agent/certs/: private.pem  public.pem
Company_data_agent/outputs/: final_financial_report_3_flash.md  final_financial_report_flash.md  final_financial_report_pro.md
Vespa_Query/: insights.ipynb  insights_new.ipynb  perplexity_langgraph.ipynb  plots_table.ipynb  query_decompose.ipynb  reconstructed_financial_tables_final_001.md  vespa_test.ipynb
Vespa_Query/input/: sample_table.md
Vespa_Query/insights_plots/: final_pe_report.md
Vespa_Query/insights_report/: final_pe_report_Balance_sheet.md  final_pe_report_cash_flow.md  final_pe_report_income.md
Vespa_Query/md_files/: phonepe.md  reconstructed_financial_tables_001.md  reconstructed_financial_tables_final_001.md
Vespa_Query/outputs/md_files/: reconstructed_financial_tables_final_002.md
Vespa_Query/outputs/output_md_files/: reconstructed_financial_tables_final_002.md
Vespa_Query/perplexity_output/: final_verified_audit_report.md  internal_search_report.md
(+9 files in other folders)
