[project]
name = "company-data-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.3.0",
    "dotenv>=0.9.9",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.2",
    "langchain-perplexity>=1.1.0",
    "pyvespa>=0.62.0",
    "rich>=14.2.0",
]
